# obrspis

./: CMakeLists.txt  LICENSE  README.md
cmake/modules/unix/: FindLibEdit.cmake
src/: lisp.cpp  lisp.h  main.cpp
